# enterprise-autoharness-lab

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  README.md  ROADMAP.md  pyproject.toml
.hermes/codex-prompts/: validate-gemini-plan.md  webui-phase1.md
.hermes/droid-prompts/: enrich-scenarios.md  phase-1-gemini-foundation.md  phase-2-gemini-tests.md
backend/: Makefile  config.py  main.py  pyproject.toml
backend/api/: router.py
backend/api/v1/: __init__.py  environments.py  experiments.py  scenarios.py
backend/models/: __init__.py  benchmark.py  scenario.py
backend/services/: __init__.py  file_reader.py
docs/: CLAIMS-VALIDATION.md
docs/benchmarks/: expense-approval-test-noisy.json  expense-approval-test-scripted.json  expense-approval-test.txt
docs/plans/: gemini-agent-plan-review.md  gemini-agent-plan.md
docs/site/: package-lock.json  package.json
docs/site/src/: app.html
scenarios/deployment/: test.jsonl  train.jsonl  validation.jsonl
scenarios/expense-approval/: test.jsonl  train.jsonl  validation.jsonl
scenarios/support-ticket/: test.jsonl  train.jsonl  validation.jsonl
scripts/: validate-claims.sh
src/autoharness_lab/: cli.py  models.py
src/autoharness_lab/agents/: __init__.py  gemini.py  noisy.py  scripted.py
src/autoharness_lab/environments/: __init__.py  deployment.py  expense_approval.py  support_ticket.py
src/autoharness_lab/evaluation/: __init__.py  runner.py
src/autoharness_lab/harness/: __init__.py  contracts.py
src/autoharness_lab/model_clients/: gemini.py
src/autoharness_lab/policy/: __init__.py  deployment.py  expense.py  support.py
tests/end_to_end/: test_deterministic_experiment.py  test_gemini_mock_e2e.py
tests/integration/: test_agent_to_environment.py  test_gemini_live.py
tests/unit/: test_agents.py  test_deployment.py  test_deployment_policy.py  test_expense_approval.py  test_expense_policy.py  test_gemini_agent.py  test_gemini_client.py  test_gemini_prompt.py  test_harness.py  test_metrics.py  test_models.py  test_support_policy.py  test_support_ticket.py
(+21 files in other folders)
