[project]
name = "autoharness-lab"
version = "0.1.0"
description = "Enterprise AutoHarness Lab: automatically synthesize deterministic control code from agent execution failures"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Max", email = "me@rmax.io" }
]
keywords = ["agents", "evaluation", "safety", "harness", "policy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
reporting = [
    "jinja2>=3.1",
    "matplotlib>=3.8",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
autoharness = "autoharness_lab.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoharness_lab"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "W",
    "UP", "B", "SIM", "C4",
    "RUF", "ARG", "FBT", "T20",
]
ignore = ["ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"

[tool.ty]
packages = ["src/autoharness_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
