[project]
name = "autoharness-backend"
version = "0.1.0"
description = "FastAPI backend for Enterprise AutoHarness Lab"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv]
package = false
